--- a/app/design/frontend/base/default/template/contact/index.phtml
+++ b/app/design/frontend/base/default/template/contact/index.phtml
@@ -26,9 +26,9 @@
 ?>
 <div id="messages_product_view"><?php echo $this->getMessagesBlock()->toHtml() ?></div>
 <div class="page-title">
-    <h1><?php echo Mage::helper('contacts')->__('Contact Us') ?></h1>
+    <h1><?php echo Mage::helper('contacts')->__('Contact With Us') ?></h1>
 </div>
-<form action="<?php echo $this->getFormAction(); ?>" id="contactForm" method="post">
+<form action="<?php echo $this->getFormActionUrl(); ?>" id="customContactForm" method="post">
     <div class="fieldset">
         <h2 class="legend"><?php echo Mage::helper('contacts')->__('Contact Information') ?></h2>
         <ul class="form-list">
@@ -68,6 +68,6 @@
 </form>
 <script type="text/javascript">
 //<![CDATA[
-    var contactForm = new VarienForm('contactForm', true);
+    var contactForm = new VarienForm('customContactForm', true);
 //]]>
 </script>
